--- a/src/i18n/language/zh-TW.json
+++ b/src/i18n/language/zh-TW.json
@@ -463,8 +463,8 @@
   "status_3": "未錄取",
   "status_4": "已取消報名",
   "status_5": "職缺已關閉",
-  "are_you_sure": "確認要取消報名?",
-  "yes": "確認",
+  "are_you_sure": "確定要取消報名?",
+  "cancel_apply": "取消報名",
   "no": "否",
   "job_location": "工作地點",
   "review": "審核"
