--- a/src/i18n/language/en-US.json
+++ b/src/i18n/language/en-US.json
@@ -464,8 +464,13 @@
   "status_4": "Canceled",
   "status_5": "Closed",
   "are_you_sure": "Are you sure want to cancel the application?",
-  "cancel_apply": "Comfirm",
+  "comfirm": "Comfirm",
   "no": "No",
   "job_location": "Location",
-  "review": "Review"
+  "review": "Review",
+  "review_application": "Review Application",
+  "edit_jobs": "Edit Jobs",
+  "new_jobs": "New Jobs",
+  "apply_time": "Apply Time",
+  "helper_info": "Helper Info"
 }
