--- a/src/i18n/language/en-US.json
+++ b/src/i18n/language/en-US.json
@@ -4,15 +4,29 @@
   "my_info": "My Info",
   "my_resume": "My resume",
   "application_status": "Application Status",
-  "post_jobs": "Post Jobs",
+  "manage_jobs": "Manage Jobs",
   "translate": "Translate",
   "about_us": "About Us",
   "find_jobs": "Find Jobs",
   "faqs": "FAQ's",
   "contact_us": "Contact Us",
   "welcome_back": "Welcome Back",
+  "copyright": "Copyright",
+  "all_jobs": "All Jobs",
+  "hot_jobs": "Hot Jobs",
+  "latest_jobs": "Lastest Jobs",
+  "member": "Member",
+  "about_work_exchange": "About Work Exchange",
+  "terms_of_service": "Terms of Service",
+  "privacy_policy": "Privacy Policy",
+  "check_application_status": "Application Status",
+  "post_jobs": "Post Jobs",
+  "support": "Support",
   "title_1": "Hot",
   "slogan": "",
+  "search_by_location": "By location",
+  "search_by_time": "By time",
+  "search_directly": "Search Directly",
   "home": "Home",
   "read_more": "Read More",
   "apply": "Apply",
@@ -472,5 +486,7 @@
   "edit_jobs": "Edit Jobs",
   "new_jobs": "New Jobs",
   "apply_time": "Apply Time",
-  "helper_info": "Helper Info"
+  "helper_info": "Helper Info",
+  "no_data_label": "I didn't find anything for you",
+  "no_results_label": "The filter didn't uncover any results"
 }
