--- a/src/i18n/language/zh-TW.json
+++ b/src/i18n/language/zh-TW.json
@@ -1,18 +1,32 @@
 {
   "logout": "登出",
-  "manage_profile": "管理我的帳戶",
+  "manage_profile": "管理帳戶",
   "my_info": "我的基本資料",
   "my_resume": "我的履歷",
   "application_status": "報名狀態",
-  "post_jobs": "刊登換宿",
+  "manage_jobs": "管理換宿機會",
   "translate": "翻譯語言",
   "about_us": "關於我們",
   "find_jobs": "換宿機會",
   "faqs": "換宿FAQ's",
   "contact_us": "聯絡我們",
   "welcome_back": "歡迎回來",
+  "copyright": "版權所有",
+  "all_jobs": "所有換宿",
+  "hot_jobs": "熱門換宿",
+  "latest_jobs": "最新換宿",
+  "member": "會員中心",
+  "about_work_exchange": "關於打工換宿",
+  "terms_of_service": "服務條款",
+  "privacy_policy": "隱私權政策",
+  "check_application_status": "查詢報名狀態",
+  "post_jobs": "刊登換宿",
+  "support": "幫助中心",
   "title_1": "熱門換宿",
   "slogan": "",
+  "search_by_location": "地區搜尋",
+  "search_by_time": "時間搜尋",
+  "search_directly": "直接搜尋",
   "home": "首頁",
   "read_more": "詳細資訊",
   "apply": "報名",
@@ -472,5 +486,7 @@
   "edit_jobs": "編輯換宿",
   "new_jobs": "新增換宿",
   "apply_time": "報名時間",
-  "helper_info": "小幫手資訊"
+  "helper_info": "小幫手資訊",
+  "no_data_label": "找不到資料",
+  "no_results_label": "無過濾資料"
 }
