先調版面 明天寫搜尋

--- a/src/i18n/language/en-US.json
+++ b/src/i18n/language/en-US.json
@@ -6,7 +6,7 @@
   "application_status": "Application Status",
   "manage_jobs": "Manage Jobs",
   "translate": "Translate",
-  "about_us": "About Us",
+  "about_us": "About Workweee",
   "find_jobs": "Find Jobs",
   "faqs": "FAQ's",
   "contact_us": "Contact Us",
