--- a/src/i18n/language/zh-TW.json
+++ b/src/i18n/language/zh-TW.json
@@ -6,7 +6,7 @@
   "application_status": "報名狀態",
   "manage_jobs": "管理換宿機會",
   "translate": "翻譯語言",
-  "about_us": "關於我們",
+  "about_us": "關於Workweee",
   "find_jobs": "換宿機會",
   "faqs": "換宿FAQ's",
   "contact_us": "聯絡我們",
