--- a/src/i18n/language/zh-TW.json
+++ b/src/i18n/language/zh-TW.json
@@ -23,7 +23,7 @@
   "post_jobs": "刊登換宿",
   "support": "幫助中心",
   "title_1": "熱門換宿",
-  "slogan": "體驗生活，看見臺灣",
+  "slogan": "享受生活，體驗工作",
   "search_by_location": "地區搜尋",
   "search_by_time": "時間搜尋",
   "search_directly": "直接搜尋",
@@ -31,6 +31,7 @@
   "home": "首頁",
   "read_more": "詳細資訊",
   "apply": "報名",
+  "null": "帳號長度為 4 到 20 個字",
   "step1": "會員帳號資料",
   "step2": "基本資料",
   "account": "會員帳號",
@@ -60,7 +61,6 @@
   "female": "女",
   "rahter_not_say": "不願透露",
   "required": "必填",
-  "null": "帳號長度為 4 到 20 個字",
   "login": "登入",
   "not_yet_registered": "未註冊帳戶？",
   "create_account": "註冊 Workweee",
@@ -489,7 +489,7 @@
   "apply_time": "報名時間",
   "helper_info": "小幫手資訊",
   "no_data_status_host": "目前還沒有人提出換宿申請",
-  "no_data_status_helper": "",
+  "no_data_status_helper": "目前還沒有申請任何換宿",
   "no_data_label": "無刊登換宿工作資訊",
   "no_results_label": "查無過濾資料! 換個條件試試?"
 }
