--- a/src/i18n/language/en-US.json
+++ b/src/i18n/language/en-US.json
@@ -23,11 +23,14 @@
   "post_jobs": "Post Jobs",
   "support": "Support",
   "title_1": "Hot",
-  "slogan": "Live yor life fully while you're here. Experience everything!",
+  "slogan": "Live yor life fully while you're here!",
   "search_by_location": "By location",
   "search_by_time": "By time",
   "search_directly": "Search Directly",
   "search": "Search",
+  "slogan1": "Experience everything!",
+  "guide_helper": "I'm looking for a job",
+  "guide_host": "I want to post a job",
   "home": "Home",
   "read_more": "Read More",
   "apply": "Apply",
