--- a/src/i18n/language/zh-TW.json
+++ b/src/i18n/language/zh-TW.json
@@ -28,6 +28,9 @@
   "search_by_time": "時間搜尋",
   "search_directly": "直接搜尋",
   "search": "搜尋",
+  "slogan1": "打工換宿給你多元的深度體驗",
+  "guide_helper": "我要找打工換宿",
+  "guide_host": "我要刊登換宿",
   "home": "首頁",
   "read_more": "詳細資訊",
   "apply": "報名",
