工作搜尋頁

--- a/src/i18n/language/en-US.json
+++ b/src/i18n/language/en-US.json
@@ -22,19 +22,26 @@
   "check_application_status": "Application Status",
   "post_jobs": "Post Jobs",
   "support": "Support",
-  "title_1": "Hot",
   "slogan": "Live yor life fully while you're here!",
   "search_by_location": "By location",
   "search_by_time": "By time",
   "search_directly": "Search Directly",
   "search": "Search",
-  "slogan1": "Experience everything!",
+  "section_1": "",
+  "section_2": "Experience everything!",
+  "section_3": "Latest Jobs",
+  "section_4": "Hot Jobs",
   "guide_helper": "I'm looking for a job",
   "guide_host": "I want to post a job",
   "home": "Home",
   "read_more": "Read More",
   "apply": "Apply",
   "null": "",
+  "contact_email": "We'll contact you by e-mail",
+  "contact_message": "Thanks for your message!",
+  "message": "Message",
+  "contact_info": "Contact email:",
+  "send_us": "Send us some feedback!",
   "step1": "Account Info",
   "step2": "Personal Info",
   "account": "Account",
