--- a/src/i18n/language/zh-TW.json
+++ b/src/i18n/language/zh-TW.json
@@ -22,19 +22,26 @@
   "check_application_status": "查詢報名狀態",
   "post_jobs": "刊登換宿",
   "support": "幫助中心",
-  "title_1": "熱門換宿",
   "slogan": "享受生活，體驗工作",
   "search_by_location": "地區搜尋",
   "search_by_time": "時間搜尋",
   "search_directly": "直接搜尋",
   "search": "搜尋",
-  "slogan1": "打工換宿給你多元的深度體驗",
-  "guide_helper": "我要找打工換宿",
-  "guide_host": "我要刊登換宿",
+  "section_1": "現在開始行動",
+  "section_2": "多元深度體驗",
+  "section_3": "最新換宿",
+  "section_4": "熱門換宿",
+  "guide_helper": "找打工換宿",
+  "guide_host": "刊登換宿",
   "home": "首頁",
   "read_more": "詳細資訊",
   "apply": "報名",
   "null": "帳號長度為 4 到 20 個字",
+  "contact_email": "我們會透過填寫的e-mail與您聯絡",
+  "contact_message": "感謝您珍貴的意見，我們會繼續努力!",
+  "message": "您的意見",
+  "contact_info": "聯絡email:",
+  "send_us": "給我們一點寶貴的意見吧!",
   "step1": "會員帳號資料",
   "step2": "基本資料",
   "account": "會員帳號",
