--- a/src/i18n/language/en-US.json
+++ b/src/i18n/language/en-US.json
@@ -22,6 +22,7 @@
   "check_application_status": "Application Status",
   "post_jobs": "Post Jobs",
   "support": "Support",
+  "info": "Info",
   "slogan": "Live yor life fully while you're here!",
   "search_by_location": "By location",
   "search_by_time": "By time",
