--- a/src/i18n/language/zh-TW.json
+++ b/src/i18n/language/zh-TW.json
@@ -22,6 +22,7 @@
   "check_application_status": "查詢報名狀態",
   "post_jobs": "刊登換宿",
   "support": "幫助中心",
+  "info": "基本資料",
   "slogan": "享受生活，體驗工作",
   "search_by_location": "地區搜尋",
   "search_by_time": "時間搜尋",
